--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
 
   <!-- CSS  -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto|Source+Sans+Pro" />
   <link rel="stylesheet" href="assets/css/materialize.min.css" />
   <link rel="stylesheet" href="assets/css/style.css" />
   <link rel="stylesheet" href="assets/css/edition.css" />
