--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,13 +15,9 @@ main {
     flex: 1 0 auto;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5 {
+h1, h2, h3, h4, h5, h6 {
     margin: 1.75rem 0 1rem;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Source Sans Pro', sans-serif;
     font-weight: 300;
     line-height: 1.15;
 }
@@ -51,53 +47,53 @@ h6 {
     font-size: 1.0em;
 }
 
-small,
-.text_small {
+small, .text_small {
     font-size: 0.889em;
 }
 
 @media screen and (min-width: 768px) {
-    h1, h2, h3, h4, h5 {
-        margin: 1.75rem 0 1rem;
-        font-family: 'Roboto', sans-serif;
+    h1, h2, h3, h4, h5, h6 {
         font-weight: 400;
-        line-height: 1.15;
-      }
-      
-      h1 {
+    }
+    
+    h1 {
         margin-top: 0;
         font-size: 2.488em;
-      }
-      
-      h2 {font-size: 2.074em;}
-      
-      h3 {font-size: 1.728em;}
-      
-      h4 {font-size: 1.44em;}
-      
-      h5 {font-size: 1.2em;}
-      
-      h6 {font-size: 1.0em;}
+    }
+    
+    h2 {
+        font-size: 2.074em;
+    }
+    
+    h3 {
+        font-size: 1.728em;
+    }
+    
+    h4 {
+        font-size: 1.44em;
+    }
+    
+    h5 {
+        font-size: 1.2em;
+    }
+    
+    h6 {
+        font-size: 1.0em;
+    }
 
-      small, .text_small {font-size: 0.833em;}
+    small, .text_small {
+        font-size: 0.833em;
+    }
 }
 
 strong {
     font-weight: bolder !important;
 }
 
-.flex {
-    display: flex;
-    flex-wrap: wrap;
-}
-
+/* Additional Text Colors */
 .header {
-    font-weight: 300;
     color: #005E93;
 }
-
-
-/* Additional Text Colors */
 
 .dark-primary {
     color: #1976D2 !important;
