--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,11 @@ main {
     flex: 1 0 auto;
 }
 
+.new {
+    border-radius: 5px !important;
+    margin-top: 0.5em;
+}
+
 h1, h2, h3, h4, h5, h6 {
     margin: 1.75rem 0 1rem;
     font-family: 'Source Sans Pro', sans-serif;
