Added paper session to ISCA'19. Fixed missing title for Verma talk.

--- a/_layouts/edition-page.html
+++ b/_layouts/edition-page.html
@@ -110,6 +110,9 @@
                     </h4>
                     {{ p.content | markdownify }}
                 {% elsif p.type == "paper_session" %}
+                    {% if page.is_accepting_submission %}
+                        <p>Under review.</p>
+                    {% endif %}
                     {% for paper in p.papers %}
                         {% if paper.paper %}
                         <a href="assets/docs/{{ p.edition }}/{{ paper.paper }}">
