Fixed newlines and typo in navlinks. Added copyright notice to site.

--- a/_includes/nav-links.html
+++ b/_includes/nav-links.html
@@ -8,4 +8,4 @@
 
 <li><a href="/submission">Submission</a></li>
 <li><a href="/program-committee">Committies</a></li>
-<li><a href="/previous-editions">Previous Editions</li>
+<li><a href="/previous-editions">Previous Editions</a></li>
