--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
   <footer class="page-footer blue-grey darken-4">
     <div class="footer-copyright">
       <div class="container">
-        Template built with <a href="http://materializecss.com" target="_blank">Materialize</a>.
+        <small>Copyright &copy; 2018 - {{ 'now' | date: "%Y" }} EMC2. Template built with <a href="http://materializecss.com" target="_blank">Materialize</a>.</small>
       </div>
     </div>
   </footer>
