Fixed typo in braces.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,7 @@
   
   {% if page.layout == "edition-page" %}
   <meta property="og:image"
-        content="{{ https://www.emc2-workshop.com/assets/images/editions/{{ page.slug }}.jpg }}" />
+        content="https://www.emc2-workshop.com/assets/images/editions/{{ page.slug }}.jpg" />
   {% endif %}
 </head>
 
