--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,9 +13,14 @@
   <link rel="stylesheet" href="assets/css/style.css" />
   <link rel="stylesheet" href="assets/css/edition.css" />
   
+  <meta property="og:title" content="{{ site.title }}" />
+  <meta property="og:url" content="{{ page.url }}" />
+  <meta property="og:type" content="website" />
   {% if page.layout == "edition-page" %}
   <meta property="og:image"
         content="https://www.emc2-workshop.com/assets/images/editions/{{ page.slug }}.jpg" />
+  {% else %}
+  <meta property="og:image" content="https://www.emc2-workshop.com/assets/images/wordcloud.svg" />
   {% endif %}
 </head>
 
