Fixed the URL to include the full base URL,

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="assets/css/edition.css" />
   
   <meta property="og:title" content="{{ site.title }}" />
-  <meta property="og:url" content="{{ page.url }}" />
+  <meta property="og:url" content="https://www.emc2-workshop.com{{ page.url }}" />
   <meta property="og:type" content="website" />
   {% if page.layout == "edition-page" %}
   <meta property="og:image"
