Added EMCC details.

--- a/_layouts/edition-page.html
+++ b/_layouts/edition-page.html
@@ -152,6 +152,10 @@
         </div>
         {% endfor %}
     </div>
+
+    <div id="tab_emcc" class="program-container">
+        {% include emcc.html %}
+    </div>
 </main>
 
 {% include footer.html %}
