--- a/_layouts/edition-page.html
+++ b/_layouts/edition-page.html
@@ -55,7 +55,12 @@
           {% else %}
             <a href="#tab_program">Program</a>
           {% endif %}
-        </li>
+          </li>
+          {% if page.has_emcc_submission %}
+            <li class="tab col s3">
+                <a href="#tab_emcc">EMCC</a>
+            </li>
+          {% endif %}
       </ul>
     </div>
 
@@ -153,9 +158,11 @@
         {% endfor %}
     </div>
 
+    {% if page.has_emcc_submission %}
     <div id="tab_emcc" class="program-container">
         {% include emcc.html %}
     </div>
+    {% endif }
 </main>
 
 {% include footer.html %}
