Fix syntax bug.

--- a/_layouts/edition-page.html
+++ b/_layouts/edition-page.html
@@ -162,7 +162,7 @@
     <div id="tab_emcc" class="program-container">
         {% include emcc.html %}
     </div>
-    {% endif }
+    {% endif %}
 </main>
 
 {% include footer.html %}
