Added Lecunn to NeurIPS program.

--- a/_layouts/edition-page.html
+++ b/_layouts/edition-page.html
@@ -72,6 +72,8 @@
         {% for p in program %}
         <div class="ed-grid-container-program-item" id="{{ p.id }}">
             {% case p.type %}
+                {% when 'grand_keynote' %}
+                    {% assign talk_class_header = "Grand Keynote" %}
                 {% when 'keynote' %}
                     {% assign talk_class_header = "Keynote" %}
                 {% when 'invited_talk' %}
