Call the grand keynote distinguished instead.

--- a/_layouts/edition-page.html
+++ b/_layouts/edition-page.html
@@ -74,7 +74,7 @@
         <div class="ed-grid-container-program-item" id="{{ p.id }}">
             {% case p.type %}
                 {% when 'grand_keynote' %}
-                    {% assign talk_class_header = "Grand Keynote" %}
+                    {% assign talk_class_header = "Distinguished Keynote" %}
                 {% when 'keynote' %}
                     {% assign talk_class_header = "Keynote" %}
                 {% when 'invited_talk' %}
