--- a/_layouts/edition-page.html
+++ b/_layouts/edition-page.html
@@ -11,7 +11,7 @@
         {% assign event_session_header = "" %}
 {% endcase %}
 
-{% assign program = site.programs|where: "edition",page.edition|group_by:"order"|sort:"order" %}
+{% assign program = site.programs|where: "edition",page.edition|group_by:"order"|sort:"name" %}
 {% assign program_size = program|size %}
 {% assign paper_session_counter = 0 %}
 {% assign talk_class_header = "" %}
@@ -171,3 +171,5 @@
 </main>
 
 {% include footer.html %}
+
+{{ program }}
