--- a/_layouts/edition-page.html
+++ b/_layouts/edition-page.html
@@ -43,7 +43,7 @@
         <div class="ed-grid-item-header-note">
             {% if page.submission_deadline_extended %}
                 {% if page.is_accepting_submission %}
-                <blockquote class="z-depth-1; text-align: left;">
+                <blockquote class="z-depth-1" style="text-align: left;">
                     <p style="padding: 1rem;">
                         <strong>Important Update:</strong> The paper submission deadline has been extended to {{ page.submission_deadline_extended|date: "%B %d, %Y" }}.
                     </p>
