Added sponsors to NeurIPS. Edition pages will support showing unique sponsors per edition.

--- a/_layouts/edition-page.html
+++ b/_layouts/edition-page.html
@@ -180,6 +180,18 @@
         {% include emcc.html %}
     </div>
     {% endif %}
+
+    <!-- Sponsors -->
+    {% if page.sponsors %}
+    <div class="program-container">
+        <h3 class="header">Workshop Sponsors</h3>
+        {% for s in page.sponsors %}
+            <a href="{{ s.url }}" target="_blank">
+                <img src="assets/sponsors/{{ s.logo }}" alt="{{ s.name }}" />
+            </a>
+        {% endfor %}
+    </div>
+    {% endif %}
 </main>
 
 {% include footer.html %}
