Fixed sponsor logo image uRLs.

--- a/_layouts/edition-page.html
+++ b/_layouts/edition-page.html
@@ -187,7 +187,7 @@
         <h3 class="header">Workshop Sponsors</h3>
         {% for s in page.sponsors %}
             <a href="{{ s.url }}" target="_blank">
-                <img src="assets/sponsors/{{ s.logo }}" alt="{{ s.name }}" />
+                <img src="assets/images/sponsors/{{ s.logo }}" alt="{{ s.name }}" />
             </a>
         {% endfor %}
     </div>
