--- a/_layouts/edition-page.html
+++ b/_layouts/edition-page.html
@@ -82,6 +82,8 @@
         {% for p_group in program %}
         {% assign p_group_items_sorted = p_group.items|sort:"time_end" %}
         {% for p in p_group_items_sorted %}
+        {% if p.hidden %}
+        {% else %}
         <div class="ed-grid-container-program-item" id="{{ p.id }}">
             {% case p.type %}
                 {% when 'grand_keynote' %}
@@ -171,6 +173,7 @@
                 {% endif %}
             </div>
         </div>
+        {% endif %}
         {% endfor %}
         {% endfor %}
     </div>
