--- a/_layouts/edition-page.html
+++ b/_layouts/edition-page.html
@@ -41,14 +41,21 @@
             <h5 class="primary-text" style="margin: 0;">{{ event_session_header }}</h5>
         </div>
         <div class="ed-grid-item-header-note">
-            {% if page.submission_deadline_extended %}
-                {% if page.is_accepting_submission %}
+                
+            {% if page.is_accepting_submission %}
+                {% if page.submission_acceptance_extended %}
                 <blockquote class="z-depth-1" style="text-align: left;">
                     <p style="padding: 1rem;">
-                        <strong>Important Update:</strong> The paper submission deadline has been extended to {{ page.submission_deadline_extended|date: "%B %d, %Y" }}.
+                        <strong>Acceptance Notification Date Extended:</strong> The notification date for papers and posters has been extended to {{ page.submission_deadline_extended|date: "%B %d, %Y" }}.
                     </p>
                 </blockquote>
-                {%endif %}
+                {% elsif page.submission_deadline_extended %}
+                <blockquote class="z-depth-1" style="text-align: left;">
+                    <p style="padding: 1rem;">
+                        <strong>Submission Deadline Extended:</strong> The paper submission deadline has been extended to {{ page.submission_deadline_extended|date: "%B %d, %Y" }}.
+                    </p>
+                </blockquote>
+                {% endif %}
             {% endif %}
 
             {{ page.content }}
