Adding google analytics.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,6 +22,15 @@
   {% else %}
   <meta property="og:image" content="https://www.emc2-workshop.com/assets/images/wordcloud.svg" />
   {% endif %}
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113122174-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-113122174-1');
+  </script>
 </head>
 
 <body>
