Added presentation guidelines.

--- a/_layouts/edition-page.html
+++ b/_layouts/edition-page.html
@@ -58,6 +58,14 @@
                 {% endif %}
             {% endif %}
 
+            {% assign guideline = site.guidelines|where: "edition",page.edition|first %}
+            {% if guideline %}
+            <blockquote class="z-depth-1" style="text-align: left;">
+                <p style="padding: 1rem;">
+                    <strong>Notice to Presenters:</strong> Guidelines for presenting you papers and posters is available <a href="{{ guideline.permalink }}">here</a>.
+                </p>
+            </blockquote>
+            {% endif %}
             {{ page.content }}
         </div>
     </div>
