--- a/_layouts/edition-page.html
+++ b/_layouts/edition-page.html
@@ -62,7 +62,7 @@
             {% if guideline %}
             <blockquote class="z-depth-1" style="text-align: left;">
                 <p style="padding: 1rem;">
-                    <strong>Notice to Presenters:</strong> Guidelines for presenting you papers and posters is available <a href="{{ guideline.permalink }}">here</a>.
+                    <strong>Notice to Authors:</strong> Guidelines for oral and posters presentations are available <a href="{{ guideline.permalink }}">here</a>.
                 </p>
             </blockquote>
             {% endif %}
