--- a/_layouts/edition-page.html
+++ b/_layouts/edition-page.html
@@ -58,14 +58,17 @@
                 {% endif %}
             {% endif %}
 
+            {% if page.is_upcoming %}
             {% assign guideline = site.guidelines|where: "edition",page.edition|first %}
             {% if guideline %}
             <blockquote class="z-depth-1" style="text-align: left;">
                 <p style="padding: 1rem;">
-                    <strong>Notice to Authors:</strong> Guidelines for oral and posters presentations are available <a href="{{ guideline.permalink }}">here</a>.
+                    <strong>Notice to Authors:</strong> Guidelines for oral and poster presentations are available <a href="{{ guideline.permalink }}">here</a>.
                 </p>
             </blockquote>
             {% endif %}
+            {% endif %}
+
             {{ page.content }}
         </div>
     </div>
