Removed EMCC submission pages in preparation for standalone website and cleaned up some navigation.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,6 +12,7 @@
     $(document).ready(function(){
       $('.sidenav').sidenav();
       $('.tabs').tabs();
+      $(".dropdown-trigger").dropdown({ hover: true, constrainWidth: false });
     });
   </script>
 </body>
