--- a/_includes/header.html
+++ b/_includes/header.html
@@ -43,14 +43,9 @@
           EMC<sup>2</sup>
         </a>
 
-        <ul class="right hide-on-med-and-down">
-          {% include nav-links.html %}
-        </ul>
+        {% include nav.html %}
+        {% include nav-mobile.html %}
 
-        <ul id="nav-mobile" class="sidenav">
-          {% include nav-links.html %}
-        </ul>
-        <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       </div>
     </nav>
   </header>
